--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-        <form action="checkWord.php" method="post">
+        <form action="../Controller/CheckWord.php" method="post">
             <p>Saisissez un mot de 7 lettres <input type="text" name="testedWord" /></p>
             <input type="submit" value="Tester">
         </form>
