--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="css/style.css" type="text/css"/> 
     </head>
     <body>
-
-        <form action="../Controller/CheckWord.php" method="post">
+        
+        <form method="post">
             <p>Saisissez un mot de 7 lettres <input type="text" name="testedWord" /></p>
             <input type="submit" value="Tester">
         </form>
